@@ -1,4 +1,5 @@
 version 1.2.2+
+	* Update `shell` subcommand to IPython 5
 	* Use ~/.config/jugrc as configuration file
 	* Cleanup usage string
 	* Use `bottle` instead of `web.py` for webstatus subcommand
